--- a/cyoa/congress_app/Gemfile
+++ b/cyoa/congress_app/Gemfile
@@ -7,6 +7,8 @@ gem 'rails', '4.1.7'
 gem 'sqlite3'
 #My congress gem
 gem 'congress', '~> 0.2.5'
+#my factory girl gem
+gem 'factory_girl'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.3'
 # Use Uglifier as compressor for JavaScript assets
