--- a/cyoa/congress_app/Gemfile
+++ b/cyoa/congress_app/Gemfile
@@ -48,7 +48,7 @@ group :development, :test do
 end
 
 group :test do
-  gem 'cucumber-rails', :require => false
+  gem 'cucumber-rails'
   # database_cleaner is not required, but highly recommended
   gem 'database_cleaner'
 end
