--- a/cyoa/congress_app/Gemfile
+++ b/cyoa/congress_app/Gemfile
@@ -8,7 +8,7 @@ gem 'sqlite3'
 #My congress gem
 gem 'congress', '~> 0.2.5'
 #my factory girl gem
-gem 'factory_girl'
+
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.3'
 # Use Uglifier as compressor for JavaScript assets
@@ -45,10 +45,11 @@ gem 'bcrypt', '~> 3.1.7'
 
 group :development, :test do
   gem 'rspec-rails', '~> 3.0'
+  gem 'factory_girl_rails'
 end
 
 group :test do
-  gem 'cucumber-rails'
+  gem 'cucumber-rails',:require => false
   # database_cleaner is not required, but highly recommended
   gem 'database_cleaner'
 end
