--- a/cyoa/congress_app/Gemfile
+++ b/cyoa/congress_app/Gemfile
@@ -31,6 +31,9 @@ gem 'sdoc', '~> 0.4.0',          group: :doc
 #gem 'spring',        group: :development
 gem 'devise'
 
+#Whenever is a Ruby gem that provides a clear syntax for writing and deploying cron jobs.
+gem 'whenever', :require => false
+
 # Use ActiveModel has_secure_password
 gem 'bcrypt', '~> 3.1.7'
 
